@@ -232,11 +232,48 @@ name|int
 index|[]
 name|starts
 decl_stmt|;
-comment|/** Creates a {@link Searchable} which searches<i>searchables</i>. */
+comment|/** Creates a {@link Searchable} which searches<i>searchables</i> with the default     * executor service (a cached thread pool). */
 DECL|method|ParallelMultiSearcher
 specifier|public
 name|ParallelMultiSearcher
 parameter_list|(
+name|Searchable
+modifier|...
+name|searchables
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|this
+argument_list|(
+name|Executors
+operator|.
+name|newCachedThreadPool
+argument_list|(
+operator|new
+name|NamedThreadFactory
+argument_list|(
+name|ParallelMultiSearcher
+operator|.
+name|class
+operator|.
+name|getSimpleName
+argument_list|()
+argument_list|)
+argument_list|)
+argument_list|,
+name|searchables
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * Creates a {@link Searchable} which searches<i>searchables</i> with the specified ExecutorService.    */
+DECL|method|ParallelMultiSearcher
+specifier|public
+name|ParallelMultiSearcher
+parameter_list|(
+name|ExecutorService
+name|executor
+parameter_list|,
 name|Searchable
 modifier|...
 name|searchables
@@ -262,24 +299,11 @@ operator|=
 name|getStarts
 argument_list|()
 expr_stmt|;
-name|executor
-operator|=
-name|Executors
-operator|.
-name|newCachedThreadPool
-argument_list|(
-operator|new
-name|NamedThreadFactory
-argument_list|(
 name|this
 operator|.
-name|getClass
-argument_list|()
-operator|.
-name|getSimpleName
-argument_list|()
-argument_list|)
-argument_list|)
+name|executor
+operator|=
+name|executor
 expr_stmt|;
 block|}
 comment|/**    * Executes each {@link Searchable}'s docFreq() in its own thread and waits for each search to complete and merge    * the results back together.    */
